--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
                             </div>
                         </div> -->
                     </div>
-                    <p class="Chatbot__convo1__foot"><img src="../images/sparrow favicon.png" alt="Survey Sparrow">we
+                    <p class="Chatbot__convo1__foot"><img src="../images/sparrow favicon.png"
+                            alt="Survey Sparrow"><span></span>we
                         run on
-                        surveysparrow</p>
+                        surveysparrow</span></p>
                 </div>
             </div>
             <div class="Chatbot__popup__footer">
