--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                         </div> -->
                     </div>
                     <p class="Chatbot__convo1__foot"><img src="../images/sparrow favicon.png"
-                            alt="Survey Sparrow"><span></span>we
-                        run on
-                        surveysparrow</span></p>
+                            alt="Survey Sparrow"><span>we
+                            run on
+                            surveysparrow</span></p>
                 </div>
             </div>
             <div class="Chatbot__popup__footer">
