--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="Chatbot__convo">
                     <p>Start a Conversation</p>
                     <p>The team typically replies in a few minutes.</p>
-                    <a href="#" class="Chatbot__convo__btn">New Conversation <span><img
+                    <a href="javascript:void(0)" class="Chatbot__convo__btn">New Conversation <span><img
                                 src="../images/send-icon.svg"></span></a>
                 </div>
                 <div class="Chatbot__convo1">
