Link Fix and Comment

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
             <nav class="Nav">
                 <ul class="Nav__items">
                     <li class="Nav__item">
-                        <a href="#" class="Nav__links">Products</a>
+                        <a href="javascript:void(0)" class="Nav__links">Products</a>
                     </li>
                     <li class="Nav__item">
-                        <a href="#" class="Nav__links">Features</a>
+                        <a href="javascript:void(0)" class="Nav__links">Features</a>
                     </li>
                     <li class="Nav__item">
-                        <a href="#" class="Nav__links">Use Cases</a>
+                        <a href="javascript:void(0)" class="Nav__links">Use Cases</a>
                     </li>
                     <li class="Nav__item">
-                        <a href="#" class="Nav__links">Pricing</a>
+                        <a href="javascript:void(0)" class="Nav__links">Pricing</a>
                     </li>
                     <li class="Nav__item">
-                        <a href="#" class="Nav__links Nav__btn">Login</a>
+                        <a href="javascript:void(0)" class="Nav__links Nav__btn">Login</a>
                     </li>
                 </ul>
             </nav>
