Added no index tag

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Survey Sparrow</title>
+    <title>Maxeon | Survey Sparrow</title>
     <link rel="shortcut icon" type="image/png" href="images/sparrow favicon.png" />
+    <meta name="robots" content="noindex, nofollow">
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <!--Custom Css -->
