Updated Comments & Chat Fix

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- Header Section -->
     <header>
         <div class="container">
             <h1 class="Logo">Maxeon</h1>
@@ -45,9 +46,11 @@
             </nav>
         </div>
     </header>
+    <!-- Hero Section -->
     <section class="Hero">
         <h1>Where words fail, Music speaks.</h1>
     </section>
+    <!-- Chatbot -->
     <div class="Chatbot">
         <input type="checkbox" id="Chatbot__check" class="Chatbot-check" />
         <label class="Chatbot__label" for="Chatbot__check">
